--- a/views/index.jade
+++ b/views/index.jade
@@ -3,10 +3,16 @@
     .col-xs-12.col-md-8.col-md-offset-2
       .row
         .col-xs-12.col-md-9
-          input(class="form-control", type="text", placeholder="ჩაწერეთ სათარგმნი სიტყვა")
+          input#translate-word(class="form-control", type="text", placeholder="ჩაწერეთ სათარგმნი სიტყვა")
         .col-xs-12.col-md-3
-          button(type="button", class="btn btn-info btn-block") თარგმნა
+          button#translate-btn(type="button", class="btn btn-info btn-block") თარგმნა
   .row
     .col-xs-12.col-md-8.col-md-offset-2
-      .alert.alert-success.search-results
-        p asdasdasd        
+      .search-results
+
+
+
+
+
+script(src="/javascripts/vendor/jquery-2.1.1.min.js")
+script(src="/javascripts/app.js")
